@@ -18,6 +18,8 @@ import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.hemajoo.commerce.cherry.commons.type.EntityType;
 import com.hemajoo.commerce.cherry.commons.type.StatusType;
 import com.hemajoo.commerce.cherry.model.person.exception.EmailAddressException;
+import com.hemajoo.commerce.cherry.model.person.exception.PhoneNumberException;
+import com.hemajoo.commerce.cherry.model.person.exception.PostalAddressException;
 import com.hemajoo.commerce.cherry.model.person.type.AddressType;
 import com.hemajoo.commerce.cherry.model.person.type.GenderType;
 import com.hemajoo.commerce.cherry.model.person.type.PersonType;
@@ -27,13 +29,13 @@ import com.hemajoo.commerce.cherry.persistence.base.entity.ServerEntity;
 import io.swagger.v3.oas.annotations.Hidden;
 import lombok.*;
 import org.springframework.data.jpa.domain.support.AuditingEntityListener;
+import org.springframework.http.HttpStatus;
 
 import javax.persistence.*;
 import javax.validation.constraints.NotNull;
 import java.time.LocalDate;
 import java.time.Month;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * Represents a person.
@@ -81,7 +83,7 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
     @Getter
     @Setter
     @NotNull(message = "Person: 'birthDate' cannot be null!")
-    @Column(name = "BIRTHDATE")
+    @Column(name = "BIRTHDATE", columnDefinition = "DATE")
     private Date birthDate;
 
     /**
@@ -110,7 +112,7 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
     @ToString.Exclude
     @EqualsAndHashCode.Exclude
     @JsonIgnoreProperties("person")
-    @OneToMany(targetEntity = ServerPostalAddressEntity.class, mappedBy = "person", fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+    @OneToMany(targetEntity = ServerPostalAddressEntity.class, mappedBy = "person", fetch = FetchType.LAZY, cascade = CascadeType.ALL, orphanRemoval = true)
     private List<ServerPostalAddressEntity> postalAddresses = new ArrayList<>();
 
     /**
@@ -121,7 +123,7 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
     @ToString.Exclude
     @EqualsAndHashCode.Exclude
     @JsonIgnoreProperties("person")
-    @OneToMany(targetEntity = ServerPhoneNumberEntity.class, mappedBy = "person", fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+    @OneToMany(targetEntity = ServerPhoneNumberEntity.class, mappedBy = "person", fetch = FetchType.LAZY, cascade = CascadeType.ALL, orphanRemoval = true)
     private List<ServerPhoneNumberEntity> phoneNumbers = new ArrayList<>();
 
     /**
@@ -163,9 +165,11 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
         setName(this.lastName + ", " + this.firstName);
     }
 
+    // EMAIL ADDRESS SERVICES
+
     /**
      * Returns the default email address.
-     * @return Optional default email address.
+     * @return Default email address, {@code null} otherwise.
      */
     public final ServerEmailAddressEntity getDefaultEmailAddress()
     {
@@ -190,7 +194,7 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
     public final boolean existEmail(final @NonNull String email)
     {
         return emailAddresses.stream()
-                .anyMatch(emailAddress -> emailAddress.getEmail().equalsIgnoreCase(email));
+                .anyMatch(e -> e.getEmail().equalsIgnoreCase(email));
     }
 
     /**
@@ -198,7 +202,7 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
      * @param emailAddress Email address to check.
      * @return {@code True} if it already exist, {@code false} otherwise.
      */
-    public final boolean existEmailAddress(final @NonNull ServerEmailAddressEntity emailAddress) // TODO Not sure it is necessary? Provide a test case.
+    public final boolean existEmailAddress(final @NonNull ServerEmailAddressEntity emailAddress)
     {
         return emailAddresses.stream()
                 .anyMatch(e -> e.equals(emailAddress));
@@ -207,7 +211,7 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
     /**
      * Returns the email address matching the given identifier.
      * @param id Email address identifier.
-     * @return Email address if one is matching the given identifier, null otherwise.
+     * @return Email address, if one is matching the given identifier, {@code null} otherwise.
      */
     public final ServerEmailAddressEntity getEmailById(final @NonNull UUID id)
     {
@@ -218,31 +222,31 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
     /**
      * Retrieves email addresses matching the given {@link AddressType}.
      * @param type Address type.
-     * @return List of email addresses.
+     * @return List of email addresses matching the given address type.
      */
     public final List<ServerEmailAddressEntity> findEmailAddressByType(final AddressType type)
     {
         return emailAddresses.stream()
-                .filter(emailAddress -> emailAddress.getAddressType() == type)
-                .collect(Collectors.toList());
+                .filter(e -> e.getAddressType() == type)
+                .toList();
     }
 
     /**
      * Retrieves email addresses matching the given {@link StatusType}.
      * @param status Status type.
-     * @return List of email addresses.
+     * @return List of email addresses matching the given status.
      */
     public final List<ServerEmailAddressEntity> findEmailAddressByStatus(final StatusType status)
     {
         return emailAddresses.stream()
-                .filter(emailAddress -> emailAddress.getStatusType() == status)
-                .collect(Collectors.toList());
+                .filter(e -> e.getStatusType() == status)
+                .toList();
     }
 
     /**
      * Adds an email address.
      * @param emailAddress Email address.
-     * @throws EmailAddressException Raised if the email address already belongs to another person!
+     * @throws EmailAddressException Thrown to indicate the email address already belongs to another person!
      */
     public final void addEmailAddress(final @NonNull ServerEmailAddressEntity emailAddress) throws EmailAddressException
     {
@@ -250,7 +254,7 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
         if (emailAddress.getPerson() != null)
         {
             throw new EmailAddressException(String.format(
-                    "Cannot add email address: <%s> to person: <%s> because it already belongs to person: <%s>!",
+                    "Cannot add email address: '%s' to person: '%s' because it already belongs to person: '%s'!",
                     emailAddress.getEmail(),
                     emailAddress.getPerson().getName(),
                     getName()));
@@ -261,76 +265,38 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
     }
 
     /**
-     * Returns the default postal address.
-     * @return Default postal address.
+     * Removes an email address.
+     * @param email Email address to remove.
      */
-    public final Optional<ServerPostalAddressEntity> getDefaultPostalAddress()
+    public final void removeEmailAddress(final @NonNull ServerEmailAddressEntity email)
     {
-        return postalAddresses.stream()
-                .filter(ServerPostalAddressEntity::getIsDefault).findFirst();
+        email.setPerson(null);
+        emailAddresses.remove(email);
     }
 
     /**
-     * Checks if the person has a default postal address?
-     * @return {@code True} if the person has a default postal address, {@code false} otherwise.
+     * Removes all email addresses.
      */
-    public final boolean hasDefaultPostalAddress()
+    public final void removeAllEmailAddress()
     {
-        return postalAddresses.stream().anyMatch(ServerPostalAddressEntity::getIsDefault);
+        Iterator<ServerEmailAddressEntity> iterator = emailAddresses.iterator();
+        while (iterator.hasNext())
+        {
+            iterator.next().setPerson(null);
+            iterator.remove();
+        }
     }
 
-    /**
-     * Checks if a postal address matches the given one exist?
-     * @param address Postal address.
-     * @return {@code True} if a postal address matches, {@code false} otherwise.
-     */
-    public final boolean existPostalAddress(final @NotNull ServerPostalAddressEntity address)
-    {
-        return postalAddresses.stream().anyMatch(e -> e.equals(address));
-    }
-
-    /**
-     * Retrieves postal addresses matching the given {@link AddressType}.
-     * @param type Address type.
-     * @return List of postal addresses.
-     */
-    public final List<ServerPostalAddressEntity> findPostalAddressByType(final AddressType type)
-    {
-        return postalAddresses.stream()
-                .filter(e -> e.getAddressType() == type)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Retrieves postal addresses matching the given {@link StatusType}.
-     * @param status Status type.
-     * @return List of postal addresses.
-     */
-    public final List<ServerPostalAddressEntity> findPostalAddressByStatus(final StatusType status)
-    {
-        return postalAddresses.stream()
-                .filter(e -> e.getStatusType() == status)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Adds an postal address.
-     * @param postalAddress Postal address.
-     */
-    public final void addPostalAddress(final @NonNull ServerPostalAddressEntity postalAddress)
-    {
-        postalAddress.setPerson(this);
-        postalAddresses.add(postalAddress);
-    }
+    // PHONE NUMBER SERVICES
 
     /**
      * Returns the default phone number.
-     * @return Optional default phone number.
+     * @return Default phone number if one matches, {@code null} otherwise.
      */
-    public final Optional<ServerPhoneNumberEntity> getDefaultPhoneNumber()
+    public final ServerPhoneNumberEntity getDefaultPhoneNumber()
     {
         return phoneNumbers.stream()
-                .filter(ServerPhoneNumberEntity::getIsDefault).findFirst();
+                .filter(ServerPhoneNumberEntity::getIsDefault).findFirst().orElse(null);
     }
 
     /**
@@ -343,41 +309,52 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
     }
 
     /**
-     * Checks if the given phone number (only the number) already exist?
-     * @param phoneNumber Phone number to check.
-     * @return {@code True} if it already exist, {@code false} otherwise.
+     * Checks if the given phone number exist?
+     * @param number Phone number to check.
+     * @return {@code True} if the given phone number already exist, {@code false} otherwise.
      */
-    public final boolean existPhoneNumber(final @NonNull String phoneNumber)
+    public final boolean existPhoneNumber(final @NonNull String number)
     {
         return phoneNumbers.stream()
-                .anyMatch(e -> e.getNumber().equalsIgnoreCase(phoneNumber));
+                .anyMatch(element -> element.getNumber().equalsIgnoreCase(number));
     }
 
     /**
      * Checks if the given phone number already exist?
      * @param phoneNumber Phone number to check.
-     * @return {@code True} if it already exist, {@code false} otherwise.
+     * @return {@code True} if the given phone number already exist, {@code false} otherwise.
      */
-    public final boolean existPhoneNumber(final @NonNull ServerPhoneNumberEntity phoneNumber) // TODO Not sure it is necessary? Provide a test case.
+    public final boolean existPhoneNumber(final @NonNull ServerPhoneNumberEntity phoneNumber)
     {
         return phoneNumbers.stream()
                 .anyMatch(e -> e.equals(phoneNumber));
     }
 
     /**
-     * Retrieves phone numbers matching the given {@link PhoneNumberType}.
-     * @param type Address type.
-     * @return List of phone numbers.
+     * Returns the phone number matching the given identifier.
+     * @param phoneNumberId Phone number identifier.
+     * @return Phone number, if one is matching the given identifier, {@code null} otherwise.
      */
-    public final List<ServerPhoneNumberEntity> findPhoneNumberByType(final PhoneNumberType type)
+    public final ServerPhoneNumberEntity getPhoneNumberById(final @NonNull UUID phoneNumberId)
     {
         return phoneNumbers.stream()
-                .filter(e -> e.getPhoneType() == type)
-                .collect(Collectors.toList());
+                .filter(e -> e.getId().equals(phoneNumberId)).findFirst().orElse(null);
     }
 
     /**
-     * Retrieves phone numbers matching the given {@link StatusType}.
+     * Retrieves a list of phone numbers matching the given {@link PhoneNumberType}.
+     * @param phoneNumberType Phone number type.
+     * @return List of phone numbers.
+     */
+    public final List<ServerPhoneNumberEntity> findPhoneNumberByType(final PhoneNumberType phoneNumberType)
+    {
+        return phoneNumbers.stream()
+                .filter(e -> e.getPhoneType() == phoneNumberType)
+                .toList();
+    }
+
+    /**
+     * Retrieves a list of phone numbers matching the given {@link StatusType}.
      * @param status Status type.
      * @return List of phone numbers.
      */
@@ -385,26 +362,161 @@ public class ServerPersonEntity extends ServerBaseEntity implements ServerPerson
     {
         return phoneNumbers.stream()
                 .filter(e -> e.getStatusType() == status)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * Adds a phone number.
      * @param phoneNumber Phone number.
+     * @throws PhoneNumberException Thrown to indicate the phone number already belongs to another person!
      */
-    public final void addPhoneNumber(final @NonNull ServerPhoneNumberEntity phoneNumber)
+    public final void addPhoneNumber(final @NonNull ServerPhoneNumberEntity phoneNumber) throws PhoneNumberException
     {
-        phoneNumber.setPerson(this);
+        // A phone number cannot be shared!
+        if (phoneNumber.getPerson() != null)
+        {
+            throw new PhoneNumberException(String.format(
+                    "Cannot add phone number: '%s' to person: '%s' because it already belongs to another person: '%s'!",
+                    phoneNumber.getNumber(),
+                    phoneNumber.getPerson().getName(),
+                    this.getName()), HttpStatus.BAD_REQUEST);
+        }
+
         phoneNumbers.add(phoneNumber);
+        phoneNumber.setPerson(this);
     }
 
     /**
-     * Removes an email address.
-     * @param email Email address to remove.
+     * Removes a phone number.
+     * @param phoneNumber Phone number to remove.
      */
-    public final void removeEmailAddress(final @NonNull ServerEmailAddressEntity email)
+    public final void removePhoneNumber(final @NonNull ServerPhoneNumberEntity phoneNumber)
     {
-        email.setPerson(null);
-        emailAddresses.remove(email);
+        phoneNumbers.remove(phoneNumber);
+        phoneNumber.setPerson(null);
+    }
+
+    /**
+     * Removes all phone numbers.
+     */
+    public final void removeAllPhoneNumber()
+    {
+        Iterator<ServerPhoneNumberEntity> iterator = phoneNumbers.iterator();
+        while (iterator.hasNext())
+        {
+            iterator.next().setPerson(null);
+            iterator.remove();
+        }
+    }
+
+    // POSTAL ADDRESS SERVICES
+
+    /**
+     * Returns the default postal address.
+     * @return Default postal address.
+     */
+    public final ServerPostalAddressEntity getDefaultPostalAddress()
+    {
+        return postalAddresses.stream()
+                .filter(ServerPostalAddressEntity::getIsDefault).findFirst().orElse(null);
+    }
+
+    /**
+     * Checks if the person has a default postal address?
+     * @return {@code True} if the person has a default postal address, {@code false} otherwise.
+     */
+    public final boolean hasDefaultPostalAddress()
+    {
+        return postalAddresses.stream().anyMatch(ServerPostalAddressEntity::getIsDefault);
+    }
+
+    /**
+     * Checks if the given postal address already exist?
+     * @param postalAddress Postal address to check.
+     * @return {@code True} if the postal address already exist, {@code false} otherwise.
+     */
+    public final boolean existPostalAddress(final @NonNull ServerPostalAddressEntity postalAddress)
+    {
+        return postalAddresses.stream()
+                .anyMatch(e -> e.equals(postalAddress));
+    }
+
+    /**
+     * Returns the postal address matching the given identifier.
+     * @param postalAddressId Postal address identifier.
+     * @return Postal address, if one matches the given identifier, {@code null} otherwise.
+     */
+    public final ServerPostalAddressEntity getPostalAddressById(final @NonNull UUID postalAddressId)
+    {
+        return postalAddresses.stream()
+                .filter(e -> e.getId().equals(postalAddressId)).findFirst().orElse(null);
+    }
+
+    /**
+     * Retrieves a list of postal addresses matching the given {@link AddressType}.
+     * @param type Address type.
+     * @return List of postal addresses.
+     */
+    public final List<ServerPostalAddressEntity> findPostalAddressByType(final AddressType type)
+    {
+        return postalAddresses.stream()
+                .filter(e -> e.getAddressType() == type)
+                .toList();
+    }
+
+    /**
+     * Retrieves a list of postal addresses matching the given {@link StatusType}.
+     * @param status Status type.
+     * @return List of postal addresses.
+     */
+    public final List<ServerPostalAddressEntity> findPostalAddressByStatus(final StatusType status)
+    {
+        return postalAddresses.stream()
+                .filter(e -> e.getStatusType() == status)
+                .toList();
+    }
+
+    /**
+     * Adds a postal address.
+     * @param postalAddress Postal address.
+     * @throws PostalAddressException Thrown to indicate the postal address already belongs to another person!
+     */
+    public final void addPostalAddress(final @NonNull ServerPostalAddressEntity postalAddress) throws PostalAddressException
+    {
+        // A postal address cannot be shared!
+        if (postalAddress.getPerson() != null)
+        {
+            throw new PostalAddressException(String.format("Cannot add postal address: '%s' to person: '%s' because it already belongs to person: '%s'!",
+                    postalAddress,
+                    postalAddress.getPerson().getName(),
+                    this.getName()),
+                    HttpStatus.BAD_REQUEST);
+        }
+
+        postalAddress.setPerson(this);
+        postalAddresses.add(postalAddress);
+    }
+
+    /**
+     * Removes a postal address.
+     * @param postalAddress Postal address to remove.
+     */
+    public final void removePostalAddress(final @NonNull ServerPostalAddressEntity postalAddress)
+    {
+        postalAddress.setPerson(null);
+        postalAddresses.remove(postalAddress);
+    }
+
+    /**
+     * Removes all postal addresses.
+     */
+    public final void removeAllPostalAddress()
+    {
+        Iterator<ServerPostalAddressEntity> iterator = postalAddresses.iterator();
+        while (iterator.hasNext())
+        {
+            iterator.next().setPerson(null);
+            iterator.remove();
+        }
     }
 }
